--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -7,35 +7,37 @@
   <div class="row">
     <div class="col s12">
       <div class="card">
-          <a href="{{url_for('get_recipe', recipe_id=recipe._id)}}">
+          
         <div class="card-image">
             <img src="{{ recipe.img_url }}">
             <div>
-          <strong class="header-site">{{ recipe.recipe_name }}</strong>
+          <h3><strong class="header-site">{{ recipe.recipe_name }}</strong></h3>
             </div> 
-       </div><h6>Category</h6>
-          <strong>{{ recipe.category_name }}</strong>
-            <div>
+       </div>
+       <div class="col m3"><h6>Category</h6>
+          <strong>{{ recipe.category_name }}</strong></div>
+            <div class="col m3"><h6>Prep Time</h6>
+            <p class="info-text">
+                {{ recipe.prep_time }}
+            </p></div>
+            <div class="col m3"><h6>Cook Time</h6>
+            <p class="info-text">
+                {{ recipe.cook_time }}
+            </p></div>
+          <div class="row col s6">
                 <h6>Ingredients</h6>
             <p class="info-text">
                 {{ recipe.ingredients }}
             </p></div>
-            <div><h6>Prep Time</h6>
-            <p class="info-text">
-                {{ recipe.prep_time }}
-            </p></div>
-            <div><h6>Cook Time</h6>
-            <p class="info-text">
-                {{ recipe.cook_time }}
-            </p></div>
-            <div><h6>Instructions</h6>
+                <div class="row col s12"><h6>Instructions</h6>
             <p class="info-text">
                 {{ recipe.intructions }}
             </p>
         </div>
-        </a>
-        <div class="card-content">
-        <p class="info-text"><em>Recipe by: {{ recipe.created_by }}</em></p>
+        <div class="card-content row">
+        <p class="info-text left"><em>Recipe by: {{ recipe.created_by }}</em></p>
+        </div>
+        <div>
             {% if session.user|lower == recipe.created_by|lower or "admin|lower" %}
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id)}}" class="btn-small green accent-4">Edit</a>
                 <a class="waves-effect waves-light btn-small red darken-2 modal-trigger" href="#modal1">Delete</a>
