--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
 
 <h1 class="center-align header-site">Contact form</h1>
 
-<div class="row">
+<div class="row card-panel">
     <form class="col s12 m8 offset-m2" onsubmit="return sendMail(this);">
       <div class="row">
         <div class="input-field col s6">
