--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 <div class="row">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel">
-                <h3 class="center-alignt light-blue-text text-darken-4">
+                <h3 class="center-alignt light-blue-text text-darken-4 header-site">
                     {{ username }}'s Profile
                 </h3>
             </div>
@@ -19,14 +19,16 @@
     <div class="col s12 m6 l4">
       <div class="card">
           <a href="{{url_for('get_recipe', recipe_id=recipe._id)}}">
-        <div class="card-image image-recipe">
+         <div class="recipe-card">
+            <div class="card-image image-recipe">
             <img src="{{ recipe.img_url }}">
-            </div>
-            <div>
+            </div></div>
+            <div class="recipe-text">
           <strong class="header-site">{{ recipe.recipe_name }}</strong>
             </div>
+            <div class="recipe-text">
           <strong>{{ recipe.category_name }}</strong>
-        
+        </div>
         </a>
         <div class="card-content">
         <p class="info-text"><em>Recipe by: {{ recipe.created_by }}</em></p>
